docs/book/samples/appc/blank_between_check.out
error[formatting]: exactly one blank line separates top-level declarations
  --> blank_between_check.kso:3:1
   3 | main = print (greet "kanso")
       ^
